--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.7"
+    "mongoose": "^5.7.7",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
